# wuji-hand-teleop

./: .gitignore  CLAUDE.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  Dockerfile.dockerignore  PICO.md  README.md  STEAMVR.md  cyclonedds.xml  docker-compose.yml  entrypoint.sh
docker/scripts/: adb_watchdog.sh
docs/: 01_requirements.md  02_module_decomposition.md  03_interface_definition.md  04_implementation_plan.md  05_setup_guide.md  franka_pico_guide.md  franka_teleop_plan.md  manus_wuji_guide.md  vibration_analysis_report.md
src/collision_manager/: package.xml  setup.cfg  setup.py  test_fk.py  test_mesh_performance.py
src/collision_manager/collision_manager/: __init__.py  collision_checker.py  collision_manager_node.py  fr3_kinematics.py  mesh_collision_checker.py  safe_projection.py
src/collision_manager/config/: collision_config.yaml
src/controller/: package.xml  setup.cfg  setup.py
src/controller/controller/: __init__.py  common.py  wujihand_node.py
src/franka_ik/: package.xml  setup.cfg  setup.py
src/franka_ik/franka_ik/: franka_ik_node.py  franka_output_node.py  franka_pico_input_node.py  franka_state_publisher.py  webxr_data_source.py
src/franka_ik/launch/: franka_pico_real.launch.py  franka_pico_sim.launch.py  franka_pico_viz.launch.py
src/franka_ik/rviz/: franka_pico.rviz
src/franka_ik/test/: test_franky_basic.py  test_ik_targets.py
src/input_devices/manus_input/manus_input_py/: package.xml  setup.cfg  setup.py
src/input_devices/manus_input/manus_input_py/manus_input_py/: manus_input_node.py
src/input_devices/manus_input/manus_input_py/manus_input_py/config/: manus_input.yaml
src/input_devices/manus_input/manus_ros2/: CALIBRATION_GUIDE.md  CMakeLists.txt
src/input_devices/manus_input/manus_ros2/calibration/: RightQuantumMetaglove.mcal
src/input_devices/manus_input/manus_ros2/client_scripts/: manus_data_viz.py  manus_to_mediapipe.py
src/input_devices/manus_input/manus_ros2/src/: ManusCalibrationNode.cpp  ManusDataPublisher.cpp  ManusDataPublisher.hpp  manus_data_publisher.cpp
src/input_devices/pico_input/: README.md  install_sdk.sh  package.xml  setup.cfg  setup.py
src/input_devices/pico_input/apk/: README.md
src/input_devices/pico_input/config/: pico_input.yaml
src/input_devices/pico_input/launch/: pico_input.launch.py
src/input_devices/pico_input/pico_input/: __init__.py  incremental_controller.py  one_euro_filter.py  pico_input_node.py  ros2_logging.py  xrobotoolkit_client.py
src/input_devices/pico_input/pico_input/data_source/: __init__.py  base.py  live_data_source.py  recorded_data_source.py
src/input_devices/pico_input/record/: analyze_motion_data.py  visualize_pico_raw.py
src/input_devices/pico_input/rviz/: pico_simulation.rviz  pico_visualization.rviz
src/input_devices/pico_input/test/: cleanup.sh  step1_direct_joint_control.py  step2_pose_topic_control.py  step3_visualize_in_rviz.py  step4_visualize_recorded_data.py  step5_incremental_control_with_robot.py  step6_arm_angle_stability_test.py  trackingData_sample.txt
src/input_devices/pico_input/test/common/: __init__.py  robot_config.py  robot_lifecycle.py  transform_utils.py
src/input_devices/pico_input/test/docs/: PICO_TELEOP_GUIDE.md
src/input_devices/pico_input/test/tool/: diagnose_zsp_para.py  move_to_init_pose.py  verify_fk_values.py
src/output_devices/wujihand_output/: package.xml  setup.py
src/output_devices/wujihand_output/config/: retarget_manus_left.yaml  retarget_manus_right.yaml  wujihand_ik.yaml
src/output_devices/wujihand_output/wujihand_output/: __init__.py  wujihand_controller.py
src/output_devices/wujihand_output/wujihand_output/_internal/: __init__.py  hand_interface.py
src/wuji_teleop_bringup/: package.xml  setup.cfg  setup.py
src/wuji_teleop_bringup/config/: static_transforms.yaml
src/wuji_teleop_bringup/launch/: pico_teleop.launch.py  pico_teleop_minimal.launch.py  wuji_teleop.launch.py  wuji_teleop_arm.launch.py  wuji_teleop_camera.launch.py  wuji_teleop_hand.launch.py  wuji_teleop_single.launch.py
src/wuji_teleop_bringup/wuji_teleop_bringup/: __init__.py  hand_defaults.py  tf_utils.py
src/wuji_teleop_monitor/: LOG_GUIDE.md  camera_monitor.perspective  camera_viewer.py  install_desktop.sh  package.xml  setup.cfg  setup.py  start_rqt_camera.sh
src/wuji_teleop_monitor/scripts/: launch_monitor.sh
src/wuji_teleop_monitor/wuji_teleop_monitor/: logger.py  main_window.py  monitor_node.py  ros_node.py  scanner.py  widgets.py
src/wujihand_urdf/: CMakeLists.txt  package.xml  wujihand_right.urdf
src/wujihandros2/wujihand_driver/: CMakeLists.txt
