<?xml version="1.0"?>
<package format="3">
  <name>franka_ik</name>
  <version>0.1.0</version>
  <description>Franka FR3 dual-arm IK node using pink + pinocchio</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>franka_description</depend>
  <depend>collision_manager</depend>
  <depend>pico_input</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
