<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wuji_teleop_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files for Wuji Hand and Tianji Arm teleoperation system.
    悟己手和天机臂遥操作系统的启动文件。
  </description>
  <maintainer email="support@wuji.tech">Wuji Tech</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Package dependencies -->
  <exec_depend>common_input</exec_depend>
  <exec_depend>manus_input_py</exec_depend>
  <exec_depend>manus_ros2</exec_depend>
  <exec_depend>wujihand_output</exec_depend>
  <exec_depend>tianji_output</exec_depend>
  <exec_depend>camera</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
