<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wujihand-urdf</name>
  <version>1.0.0</version>
  <description>URDF models for Wuji Hand</description>
  
  <maintainer email="support@wuji.tech">Wuji Tech</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

