<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manus_input_py</name>
  <version>0.1.0</version>
  <description>Manus glove data conversion node for Wuji Hand teleoperation</description>
  <maintainer email="support@wuji.tech">Wuji Tech</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>manus_ros2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
